# slsa-lvl3-generic-provenance-in-haskell-example

./: CHANGELOG.md  Main.hs  README.md  slsa-test-repo.cabal
.github/workflows/: cabal.yaml  ci.yaml  presubmit-cabal.yaml  presubmit-stack.yaml  release.yaml  scorecards.yaml  stack.yaml  static-checks.yaml
